--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             </button>
             <div class="nav-links">
                 <a href="#features">Features</a>
-                <a href="#waitlist" class="btn-secondary">Join Waitlist</a>
+                <a href="#about">About</a>
+                <a href="#faq">FAQ</a>
+                <a href="#contact" class="btn-secondary">Contact Us</a>
             </div>
         </nav>
     </header>
@@ -36,8 +38,9 @@
             <div class="hero-content">
                 <div class="badge fade-in">Coming Soon</div>
                 <h1 class="fade-in delay-1">Play & Earn with <span>Cash Rewards App</span></h1>
-                <p class="fade-in delay-2">The ultimate platform to turn your free time into real rewards. Complete
-                    tasks, answer surveys, and play your favorite games to earn coins.</p>
+                <p class="fade-in delay-2">A premium reward platform dedicated to providing the most transparent and
+                    highest-paying task experience. We are currently working to integrate top-tier offerwall partners to
+                    maximize your daily earnings.</p>
                 <div class="hero-btns fade-in delay-3">
                     <a href="#waitlist" class="btn-primary">Get Early Access</a>
                     <a href="#features" class="btn-outline">Explore Features</a>
@@ -93,6 +96,98 @@
             </div>
         </section>
 
+        <section class="promise container">
+            <div class="promise-card">
+                <div class="promise-header">
+                    <span class="promise-icon">🛡️</span>
+                    <h2>The Cash Rewards <span>Promise</span></h2>
+                </div>
+                <div class="promise-grid">
+                    <div class="promise-item">
+                        <div class="check">✓</div>
+                        <div class="promise-text">
+                            <h4>Guaranteed Payouts</h4>
+                            <p>We pride ourselves on 100% payout fulfillment. When you reach the threshold, your rewards
+                                are sent—no questions asked.</p>
+                        </div>
+                    </div>
+                    <div class="promise-item">
+                        <div class="check">✓</div>
+                        <div class="promise-text">
+                            <h4>No Hidden Fees</h4>
+                            <p>What you earn is what you get. We don't charge any service fees or hidden costs for
+                                withdrawals.</p>
+                        </div>
+                    </div>
+                    <div class="promise-item">
+                        <div class="check">✓</div>
+                        <div class="promise-text">
+                            <h4>Real-Time Tracking</h4>
+                            <p>Watch your earnings grow in real-time. Every task completion is logged with full
+                                transparency.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="about" class="about container">
+            <div class="about-grid">
+                <div class="about-content">
+                    <h2 class="section-title text-left">Our Mission</h2>
+                    <p>At <strong>Cash Rewards App – Play & Earn</strong>, we believe every moment spent on your mobile
+                        device should hold value. Our platform is built on transparency, security, and partnership
+                        excellence.</p>
+                    <p>We are currently in the process of applying for and establishing professional partnerships with
+                        industry leaders like AdGate Media, RevU, and OfferToro to bring you premium tasks that actually
+                        pay out.</p>
+                </div>
+                <div class="about-stats">
+                    <div class="stat-card">
+                        <h4>Secure</h4>
+                        <p>Latest encryption for payments</p>
+                    </div>
+                    <div class="stat-card">
+                        <h4>Fast</h4>
+                        <p>Within 24-48 hour payouts</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="faq" class="faq container">
+            <h2 class="section-title">Common Questions</h2>
+            <div class="faq-grid">
+                <div class="faq-item">
+                    <h4>How do I earn coins?</h4>
+                    <p>Browse the task wall, select an offer, follow the instructions precisely, and coins will be
+                        credited instantly upon completion.</p>
+                </div>
+                <div class="faq-item">
+                    <h4>How long do payments take?</h4>
+                    <p>Most rewards are processed within 24 hours. Some higher-value offerwall tasks may require a brief
+                        holding period for verification.</p>
+                </div>
+                <div class="faq-item">
+                    <h4>Are there age restrictions?</h4>
+                    <p>Users must be at least 13 or 16+ depending on regional regulations to use professional reward
+                        platforms.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="contact container">
+            <div class="contact-card">
+                <h2>Business <span>Inquiries</span></h2>
+                <p>For support or partnership proposals, reach out to our professional team.</p>
+                <div class="contact-details">
+                    <a href="mailto:shoaibakthar1632@gmail.com" class="contact-item">
+                        <span class="icon">📧</span> shoaibakthar1632@gmail.com
+                    </a>
+                </div>
+            </div>
+        </section>
+
         <section id="waitlist" class="waitlist container">
             <div class="waitlist-card">
                 <h2>Join the <span>Waitlist</span></h2>
@@ -109,6 +204,12 @@
     <footer>
         <div class="container footer-content">
             <div class="footer-logo">Cash Rewards<span> App</span></div>
+            <div class="footer-links">
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Service</a>
+                <a href="#about">About Us</a>
+                <a href="#contact">Contact</a>
+            </div>
             <p>&copy; 2026 Cash Rewards App. All rights reserved.</p>
             <div class="social-links">
                 <!-- Add social icons here if needed -->
