--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
         <div class="container footer-content">
             <div class="footer-logo">Cash Rewards<span> App</span></div>
             <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
+                <a href="privacy.html">Privacy Policy</a>
+                <a href="terms.html">Terms of Service</a>
                 <a href="#about">About Us</a>
                 <a href="#contact">Contact</a>
             </div>
